Fix svg blurred

--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,10 +1,20 @@
 .heading {
    text-align: center;
+   margin: 0;
 }
 
 .svgContainer {
     width: 100%;
-    height: calc(100vh - 190px);
+    height: calc(100vh - 180px) !important;
+    margin-bottom: 6px !important;
+    padding: 0 !important;
     background: lightgrey;
     overflow: hidden;
+    will-change: transform;
 }
+
+.transformWrapper {
+    width: 100% !important;
+    height: 100% !important;
+}
+   
